Mass / IR Spectroscopy

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -178,6 +178,7 @@
         \item In DEPT 90, we'll only see \ce{CH} carbons.
         \item In DEPT 135, \ce{CH} and \ce{CH3} groups will peak in the positive direction, and \ce{CH2} groups will peak in the negative direction.
         \item Neither experiment will show carbons that aren't bonded to any hydrogens.
+        \item Note that DEPT works for any type of carbon of any hybridization; it only discriminates based on the number of \ce{{}^1H}'s attached.
     \end{itemize}
 \end{itemize}
 
@@ -302,13 +303,13 @@
     \item Carbon-proton coupling can occur, however, splitting \ce{{}^13C} signals into multiplets.
     \item \textbf{Broadband proton decoupled} (spectrum): A \ce{{}^13C} NMR spectrum in which \ce{{}^1H}-\ce{{}^13C} coupling is eliminated by choosing instrumental parameters to decouple the proton-carbon interactions. \emph{Also known as} \textbf{BB proton decoupled}.
     \item Shielding and deshielding works the same way (see Table \ref{tab:carbonChemicalShifts}).
-    \begin{table}[h!]
+    \begin{table}[H]
         \centering
         \small
         \renewcommand{\arraystretch}{1.4}
         \begin{tabular}{|lc|}
             \hline
-            \rule{0pt}{2em}\textbf{Type of Proton} & \textbf{\shortstack{Chemical Shift\\($\bm{\delta}$, ppm)}}\\
+            \rule{0pt}{2em}\textbf{Type of Carbon} & \textbf{\shortstack{Chemical Shift\\($\bm{\delta}$, ppm)}}\\
             $\ang{1}$ Alkyl, {\sf\ce{R{\color{rex}C}H3}} & \numrange{0}{40}\\
             $\ang{2}$ Alkyl, {\sf\ce{R{\color{rex}C}H2R}} & \numrange{10}{50}\\
             $\ang{3}$ Alkyl, {\sf\ce{R{\color{rex}C}HR2}} & \numrange{15}{50}\\
