Prof Office Hours 2

--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -323,5 +323,20 @@
 
 
 
+\section{Office Hours (Snyder)}
+\begin{itemize}
+    \item \marginnote{1/26:}We use excess substrate in radical chlorination reactions to avoid polychlorination --- kinetically, we make it more likely for a chloride radical to collide with the reactant than the product.
+    \item Problem set 1, Question 6.
+    \begin{itemize}
+        \item Six is greater than exam strength.
+        \item 4 peaks in the aromatic region of \ce{{}^13C} means gives you a benzene ring.
+        \item From the \ce{{}^13C} NMR, we have 4 peaks in the aromatic region, so it is not a disubstituted asymmetric aryl ring. It's at least symmetric.
+        \item Once we get reasonably close, draw all possible structures and then analyze.
+        \item For isomer A, the two easiest lost groups are \ce{CH3} and \ce{Cl}, which both form benzylic carbocations. We also have that lower down primary methyl peak in the \ce{{}^13C} NMR.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
