--- a/preamble.tex
+++ b/preamble.tex
@@ -40,6 +40,7 @@
 
 \sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\calorie}{cal}
+\DeclareSIUnit{\atomicmassunit}{amu}
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 \setcharge{extra sep=3pt}
