--- a/main.bib
+++ b/main.bib
@@ -1,8 +1,28 @@
 @book{bib:SolomonsEtAl,
-    title = {Organic Chemistry},
-    author = {T. W. Graham Solomons and Craig B. Fryhle and Scott A. Snyder},
-    year = {2016},
-    month = {January},
+    title     = {Organic Chemistry},
+    author    = {T. W. Graham Solomons and Craig B. Fryhle and Scott A. Snyder},
+    month     = {January},
     publisher = {John Wiley \& Sons},
-    edition = {12th}
+    edition   = {12th}
+}
+
+@book{bib:Chlorobenzene-IR,
+    author    = {{Coblentz Society, Inc.}},
+    title     = {NIST Chemistry WebBook, NIST Standard Reference Database Number 69},
+    year      = {2018},
+    editor    = {P J Linstrom and W G Mallard},
+    publisher = {National Institute of Standards and Technology},
+    location  = {Gaithersburg MD, 20899},
+    chapter   = {Benzene, chloro-},
+    url       = {https://webbook.nist.gov/cgi/inchi?ID=C108907&Type=IR-SPEC&Index=2#IR-SPEC},
+    urldate   = {2022-01-28}
+}
+
+@online{bib:Chlorobenzene-1HNMR,
+    title     = {{National Institute of Advanced Industrial Science and Technology}},
+    author    = {{SDBSWeb}},
+    year      = {1999},
+    date      = {1999-03-31},
+    url       = {https://sdbs.db.aist.go.jp/sdbs/cgi-bin/landingpage?sdbsno=2109},
+    urldate   = {2022-01-27}
 }
