--- a/preamble.tex
+++ b/preamble.tex
@@ -4,8 +4,9 @@
 \usepackage{marginnote}
 \usepackage{enumitem}
 \usepackage{xr}
-\usepackage[style=apa]{biblatex}
+\usepackage[style=chem-acs]{biblatex}
 \usepackage{float,subcaption}
+\usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{siunitx}
 \usepackage{amsmath,amssymb}
@@ -30,7 +31,6 @@
 
 \setitemize[3]{label={\scriptsize$\blacksquare$}}
 
-\addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
 \usetikzlibrary{decorations,arrows.meta,bending,calc}
